# KP-for-Android-Studio

./: .gitignore  README.md  import-summary.txt  local.properties  make.bat
.navigation/app/raw-xlarge/: main.nvg.xml
app/: KPv0.8.0.apk  SR080.apk  app-release.apk  build.gradle
app/src/jni/: Android.mk  Application.mk  make.bat
app/src/jni/SmartSlog/: Makefile.am  Makefile.in  classes.c  classes.h  description.h  generic.h  kpi_interface.c  kpi_interface.h  patterns.c  patterns.h  properties.c  properties.h  property_changes.c  property_changes.h  repository.c  repository.h  ss_classes.c  ss_classes.h  ss_func.c  ss_func.h  ss_multisib.c  ss_multisib.h  ss_populate.c  ss_populate.h  ss_properties.c  ss_properties.h  structures.c  structures.h  subscription.c  subscription.h  subscription_changes.c  subscription_changes.h  subscription_changes_internal.h  subscription_internal.h
app/src/jni/SmartSlog/ckpi/: ckpi.c  ckpi.h  compose_ssap_msg.c  compose_ssap_msg.h  parse_ssap_msg.c  parse_ssap_msg.h  process_ssap_cnf.c  process_ssap_cnf.h  sib_access_tcp.c  sib_access_tcp.h  ssap_msg_common.h  sskp_errno.c  sskp_errno.h
app/src/jni/SmartSlog/utils/: check_func.c  check_func.h  kp_bool.h  kp_debug.h  kp_error.c  kp_error.h  kp_errors_define_decl.txt  list.c  list.h  util_func.c  util_func.h
app/src/jni/src/: AndroidKp.h  kp.c  kp.h  ontology.c  ontology.h
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: btn_selector.xml  button_selector.xml  circle_btn.xml  circle_btn_del.xml  circle_btn_pressed.xml  circle_btn_selector.xml  circle_button_del_pressed.xml  del_btn_selector.xml  left_selector.xml  right_selector.xml  ripple_effect.xml  ripple_selector.xml
app/src/main/res/drawable-mdpi/: button.xml  button_pressed.xml  title_button.xml  title_button_pressed.xml
app/src/main/res/drawable-v21/: ripple_effect.xml
app/src/main/res/layout-land/: agenda_interface.xml  agenda_interface_ext.xml  agenda_item.xml  guest_registration.xml  kp_interface.xml  profile.xml  projector_interface.xml  services_interface.xml  web_view.xml
app/src/main/res/layout-large/: drawer_header.xml  profile.xml
app/src/main/res/layout-xlarge-land/: agenda_interface.xml  agenda_interface_ext.xml  (+8 more)
gradle/wrapper/: gradle-wrapper.properties
(+70 files in other folders)
